<resources>
    <string name="app_name">1Cricket</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="have_a_referral_code">Have a referral code?</string>
    <string name="enter_a_code">Enter a code</string>
    <string name="already_a_user">Already a user?</string>
    <string name="log_in">Log in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">237876780994669</string>
    <string name="fb_login_protocol_scheme">fb237876780994669</string>
    <string name="by_joining_this">By Joining this contest, you accept 1Cricket\'s T&amp;C and confirm that you are not a resident of Assam, Odisha, Telangana, Nagaland or Sikkim.</string>
    <string name="MinimumWithdrawAmountLimit">500</string>
    <string name="sign_in">Login Here</string>
    <string name="channel_name">ch01</string>
    <string name="default_notification_channel_id">ch01</string>
    <string name="channel_description">Results</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="sign_up">Sign up</string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="hundered">100</string>
    <string name="two_hundred">200</string>
    <string name="five_hundred">500</string>
    <string name="add_cash_head">ADD CASH</string>
    <string name="enter_valid_amt">Enter Valid Amount</string>
    <string name="enter_min_amt">Enter minimum  Amount is 10</string>
    <string name="wk">Wicket Keeper</string>
    <string name="batsman">Batsman</string>
    <string name="all_rounder">All Rounder</string>
    <string name="bowler">Bowler</string>
    <string name="c_vc"><![CDATA[CHOOSE C & VC]]></string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="India">India</string>
    <string name="ur_global_rank">YOUR GLOBAL RANKING</string>
    <string name="aboutus">About Us</string>
    <string name="aboutustext">1Cricket is a new start-up gaming company in registered in Bangalore which started operations in June 2020. The founders have taken a passion towards ‘innovative’ games which are more user friendly, risk-free and filled with fun elements. Which is why one would surely love to play on 1Cricket.

For any kind of queries, please write to info@1cricket.in</string>
       <string name="disclaimer">DISCLAIMER</string>
        <string name="disclaimertext">The 1Cricket.in platform (the “Platform”) provides access to online games. The Company or any person working for the Company, do not promote or intend to promote any gambling or betting activity on the Platform. The users of the Platform can play the social games provided therein without any entry fee or redemption option. The users of the Platform are encouraged to play the games only for thrill and excitement. At no time would the Company ask any user to pay money or anything of value to play the games, nor would any prize be provided to the user upon winning.</string>
    <string name="ur_invited_frnds">YOUR INVITED FRIENDS</string>
    <string name="invite_frnds">INVITE FRIENDS</string>
    <string name="join_contest">JOIN CONTEST</string>
    <string name="my_teams">MY TEAMS</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="pymnt_opt">PAYMENT OPTION</string>
    <string name="pymnt_options">PAYMENT OPTION</string>
    <string name="invite_frnds_to_contact">INVITE FRIENDS TO CONTEST</string>
    <string name="select_winning_breakup">Select Winning Breakup</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="new_pass">NEW PASSWORD</string>
    <string name="as_on_pan">As on pan card</string>
    <string name="verify_pan">VERIFY YOUR PAN</string>
    <string name="pan_no">PAN Number</string>
    <string name="ten_digit_pan_no">10 Digit pan no.</string>
    <string name="as_on_adhar_card">As on aadhaar card</string>
    <string name="verify_adhar">VERIFY YOUR AADHAAR</string>
    <string name="adhar_no">Aadhaar Number</string>
    <string name="ten_digit_adhar_no">10 Digit aadhaar no.</string>
    <string name="pls_select_img">Please select image</string>
    <string name="pls_enter_name">Please Enter Name</string>
    <string name="pls_enter_doc_num">Please Enter Document Number</string>
    <string name="pls_enter_dob">Please Enter Date Of Birth</string>
    <string name="pls_enter_state_name">Please Enter State Name</string>
    <string name="withdraw_amt">WITHDRAW AMOUNT</string>
    <string name="contest">CONTESTS</string>
    <string name="match_not_started">Please Wait! Match has not started yet.</string>
    <string name="fixture">FIXTURES</string>
    <string name="live">LIVE</string>
    <string name="result">RESULTS</string>
    <string name="invite_code">Invite Code</string>
    <string name="my_team">My Team</string>
    <string name="my_recent_transactions">       Transaction History</string>
    <string name="update_your_kyc_document_for_withdraw_amount">Update your KYC document for withdraw amount.</string>
    <string name="know_your_customer">Know Your Customer</string>
    <string name="upload">Upload</string>
    <string name="pan_card">PAN CARD</string>
    <string name="aadhaar_card">AADHAAR CARD</string>
    <string name="add_remove_cards_wallets_etc">Add/remove cards,wallets, etc.</string>
    <string name="manage_payments">Manage Payments</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="bonus">Bonus</string>
    <string name="coins_balance">Coins Available</string>
    <string name="coins_in_play">Coins In Game</string>
    <string name="cash_balance">Cash Available</string>
    <string name="convert_to_coins">\n (Convert to Coins)</string>
    <string name="add_balance">Add Cash</string>
    <string name="add_balance_below"> using your netbanking, UPI, debit card and more</string>
    <string name="deposited_winnings">DEPOSITED + WINNINGS</string>
    <string name="wallet">Wallet</string>
    <string name="total_winnings">TOTAL WINNINGS</string>
    <string name="entry_fee">ENTRY FEE</string>
    <string name="free">Free</string>
    <string name="joined_with">JOINED WITH</string>
    <string name="team_1">Team 1</string>
    <string name="invite_friends_in_this_contest">Invite Friends in this Contest</string>
    <string name="invite">Invite</string>
    <string name="no_live_contest_joined">No Live Contest Joined</string>
    <string name="edit">Edit</string>
    <string name="preview">Preview</string>
    <string name="player_role">Player Role</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="c_gets_2x_points_amp_vc_gets_1_5x_points"><![CDATA[(C) Gets 2X Points & (VC) Gets 1.5X Points]]></string>
    <string name="choose_captain">Choose Captain</string>
    <string name="c">(C)</string>
    <string name="vc">(VC)</string>
    <string name="amp_vice_captain"><![CDATA[& Vice Captain]]></string>
    <string name="by_registering_i_agree_to_my11team_s">By Registering, You are agreeing 1Cricket\'s</string>
    <string name="not_avil_demo">This payment mode is not available on Demo Version</string>
    <string name="cricket">Cricket</string>
    <string name="my_matches">My Matches</string>
    <string name="upcoming_matches">Upcoming Matches</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="__06h___13m___35s_string"> 06H : 13M : 35S</string>
    <string name="___time_string">9:41</string>
    <string name="credit_left_string">Credit left</string>
    <string name="_46_5_100_string">46.5/100</string>
    <string name="ind_string">IND</string>
    <string name="nz_string">NZ</string>
    <string name="_3_string">3</string>
    <string name="_3_ek1_string">3</string>
    <string name="_1_string">1</string>
    <string name="_0_string">0</string>
    <string name="_0_ek1_string">0</string>
    <string name="pick_2_4_defenders_string">Pick 2-4 Defenders</string>
    <string name="players_string">Players</string>
    <string name="points_string">Points</string>
    <string name="credits_string">Credits</string>
    <string name="rr_wk_string">RR-WK</string>
    <string name="j_buttler_string">J Buttler</string>
    <string name="_138_5_string">138.5</string>
    <string name="_10_5_string">10.5</string>
    <string name="csk_wk_string">CSK-WK</string>
    <string name="m_dhoni_string">M Dhoni</string>
    <string name="_138_5_ek1_string">138.5</string>
    <string name="_10_5_ek1_string">10.5</string>
    <string name="csk_wk_ek1_string">CSK-WK</string>
    <string name="n_jagadeesan_string">N jagadeesan</string>
    <string name="_138_5_ek2_string">138.5</string>
    <string name="_10_5_ek2_string">10.5</string>
    <string name="continue_string">Continue</string>
    <string name="max_5_players_from_a_team_string">Max 5 players from a team</string>
    <string name="inprogress">Live</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_data">No Predictions at this moment.</string>
    <string name="completed">Completed</string>
    <string name="collapsed">collapsed: %s</string>
    <string name="expanded">expanded: %s</string>
    <string name="action_settings">Settings</string>
    <string name="return_amount">To Return Rs. </string>
    <string name="label_submit">Submit</string>
    <string name="label_cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="points_remaining">Coins in hand</string>
    <string name="internet_error_title">No internet Connection</string>
    <string name="no_internet_message">Please turn on internet connection to continue</string>
    <string name="odd_name">Odd Name</string>
    <string name="game_slip">Game Slip</string>
    <string name="game_selected">Game Selected</string>
    <string name="games_selected">Games Selected</string>
    <string name="mega_contest">Mega Contest</string>
    <string name="data_is_not_available">No Results at this moment.</string>
    <string name="enter_code">Enter Code</string>
    <string name="dob_needed__alert_title">Only age 18+ can play.</string>
    <string name="dob_needed__alert_Message">Please select Date of Birth</string>
    <string name="home">HOME</string>
    <string name="my_predict">My Bets</string>
    <string name="ranking">RANKING</string>
    <string name="groups">GROUPS</string>
    <string name="profile">PROFILE</string>
    <string name="monthly">Monthly</string>
    <string name="our_customer_support_is_available_24_7">Our Customer Support is Available 24/7</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legality">Legality</string>
    <string name="about_us">About Us</string>
    <string name="notification">Notification</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_us">Email Us</string>
    <string name="contact_1cricket_in">info@1cricket.in</string>
    <string name="title_activity_aboutus">About Us</string>
    <string name="messageWithLink">&lt;a href="http://1cricket.in/#faq">FAQs&lt;/a></string>
</resources>