<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/invite_friends"
        android:title="@string/invite_friends" />
    <item
        android:id="@+id/terms"
        android:title="@string/terms_and_conditions"/>
    <item
        android:id="@+id/policy"
        android:title="@string/privacy_policy"/>

    <item
        android:id="@+id/legality"
        android:title="@string/legality"/>

    <item
        android:id="@+id/about_us"
        android:title="@string/about_us"/>

    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"/>

    <item
        android:id="@+id/notification"
        android:title="@string/notification"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"/>
</menu>