<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#E9EEF4"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/contact_us_image"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:scaleType="fitCenter"
        android:src="@drawable/chatphone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact_us_text"
        android:text="@string/our_customer_support_is_available_24_7"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_white_bg">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/chatmail"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato_bold"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/contact_1cricket_in"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_white_bg">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/chatchat"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/messageWithLink"
            android:id="@+id/fags"
            android:clickable="true"
            android:linksClickable="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>