<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/RL_Signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        tools:context=".activity.RegistrationActivity">

        <include
            android:id="@+id/Head"
            layout="@layout/activity_mainheader"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Head">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_button"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/logo_splash" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="@color/cb_otpColor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="or"
                        android:textColor="@color/login_sign_up"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_SignInText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/login_sign_up"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_RegRefCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/color_disable_button"
                    android:theme="@style/LoginInputLayout"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/et_ReferralCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:hint="Enter invite code"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_RegMobNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/LoginInputLayout"
                    android:textColorHint="@color/color_disable_button">

                    <EditText
                        android:id="@+id/et_MobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:hint="Mobile no."
                        android:inputType="number"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="2dp"
                        android:text="You will receive an OTP for verification"
                        android:textColor="@color/login_sign_up"
                        android:textSize="11sp" />
                </com.google.android.material.textfield.TextInputLayout>





                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_registering_i_agree_to_my11team_s"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_TearmsandConditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_conditions"
                        android:textColor="@color/login_sign_up"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_RegNext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roundbutton"
                    android:elevation="3dp"
                    android:gravity="start"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="Sign up"
                    android:textAlignment="center"
                    android:textColor="@color/sign_in_btn"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/LL_EnterCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_a_referral_code"
                        android:textColor="@color/login_sign_up" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" " />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_a_code"
                        android:textColor="@color/color_disable_button"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/LL_FaceGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"

                    android:layout_gravity="start"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/RL_FBLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/im_fbicon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:scaleType="center"
                            android:src="@drawable/fb_icon" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/RL_GmailLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/im_goggleicon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:scaleType="center"
                            android:src="@drawable/google_icon" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>